<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_PC">

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.petcontrol.PetControlApi22.ui.reminders.RemindersFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="net.petcontrol.PetControlApi22.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_PC"
        android:name="net.petcontrol.PetControlApi22.ui.pc.PCFragment"
        android:label="@string/title_PC"
        tools:layout="@layout/fragment_pc" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="net.petcontrol.PetControlApi22.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="net.petcontrol.PetControlApi22.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>